<resources>
    <string name="app_name">Outubro Rosa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Outubro Rosa</string>
    <string name="nav_header_subtitle">Uma Campanha de Conscientização</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="criadores">
        Aplicativo criado e desenvolvido por:\n
        <b>Eduardo  Gabriel de Oliveira</b> e <b>Laura Monteiro Silva</b>\n
        Estudantes de ADS na UNIP.</string>

    <string name="menu_home">Início</string>
    <string name="menu_gallery">Sobre o Outubro Rosa</string>
    /////////////////////////////////////////
    <string name="menu_sintomas">Sintomas</string>
    <string name="menu_fatores_risco">Fatores de Risco</string>
    <string name="menu_slideshow">Prevenções</string>
    /////////////////////////////////////////
    <string name="menu_dadosstat">Dados Estatisticos</string>
    <string name="menu_mitoverdade">Mito x Verdade</string>
    <string name="menu_guiaautoexame">Guia Autoexame</string>
    <string name="menu_saibamais">Saiba Mais</string>
</resources>